[package]
name = "mw-assist"
description = "Assist (AI) gateway: OpenAI-compatible / Anthropic / local-process adapters with per-capability scoping, redaction, rate-limit and content-free audit, for Mailwoman V7 (plan §2.4, SPEC §14)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# t7-e4: the engine-side Assist gateway (the UI never talks to an endpoint
# directly). Adapters are HAND-ROLLED serde over the in-tree `reqwest`(rustls) — NO
# LLM SDK (the V6 `rmcp` lesson). The gateway enforces capability + data-class
# scope, runs redaction (E2EE-decrypted content + attachments excluded BY DEFAULT),
# rate-limits, and writes a CONTENT-FREE audit row (capability + scope summary +
# endpoint host, never content). The `Assistant` capability delegates to the
# existing `mw-mcp` tool registry (inherits scope + send-gating). NO send/delete/
# accept capability exists (compile-time: the enum has no such variant).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# Adapters: hand-rolled JSON over the in-tree reqwest(rustls). `multipart` for the
# Whisper-compatible /v1/audio/transcriptions slot, `stream` for streaming chat.
reqwest = { workspace = true, features = ["multipart", "stream"] }
futures-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
# LocalProcess adapter spawns a configured binary and exchanges JSON over stdio.
tokio = { workspace = true, features = ["process", "io-util"] }
# The `Assistant` capability is an UNPRIVILEGED CLIENT of the frozen V6 mw-mcp tool
# registry, inheriting mw-oauth::Scope + the send->Outbox gating. No new send path.
mw-mcp = { workspace = true }
mw-oauth = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-util"] }
futures-util = { workspace = true }
