[package]
name = "mw-autoconfig"
description = "Mail server autoconfig discovery for Mailwoman (SRV/autoconfig/autodiscover)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# Live RFC 6186 SRV resolution (pure-Rust DNS over UDP/TCP + rustls; no -sys/C/
# openssl). Default features = system-config + tokio. Already in-tree via
# mail-auth; coordinator reconciles Cargo.lock/deny.toml.
hickory-resolver = "0.26"

[dev-dependencies]
tokio = { workspace = true }
