[package]
name = "mw-cache"
description = "Layered cache (memory → Redis/Valkey → store) for Mailwoman V6 (plan §2.2, §15.6)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# t6-e2: the SPEC §15.6 layered cache — in-process memory (`moka`) →
# Redis/Valkey (`fred`, rustls TLS, NO openssl) → store fall-through, with the
# per-class scope matrix and the STRUCTURAL zero-access `PlaintextDerived`
# exclusion. `fred`/`moka` are pre-declared in the root workspace manifest (e0);
# here we reference them via `{ workspace = true }` and pin the pure-Rust rustls
# TLS + interface features. `mw-store` is the durable fall-through tier (its
# FROZEN public API only — this crate never edits mw-store).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
moka = { workspace = true }
# rustls + ring TLS ONLY (no native-tls / openssl); `i-std` pulls the standard
# command interfaces (keys/strings/etc.) this cache uses.
fred = { workspace = true, features = ["enable-rustls-ring"] }
mw-store = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
