[package]
name = "mw-directory"
description = "LDAP/GAL directory: GAL search, group expand, S/MIME cert + photo lookup, LDAP-bind auth over ldap3(rustls) for Mailwoman V7 (plan §2.2, SPEC §13)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# t7-e2: a READ-ONLY LDAP/GAL directory over `ldap3` with rustls ONLY (no
# native-tls/openssl). GAL search (every recipient field), distribution-group
# expand-before-send, S/MIME cert lookup (feeds mw-crypto §8.2), photo attributes,
# paged search, StartTLS/LDAPS, multiple directories with priority order, offline
# GAL cache via `mw-cache::CacheClass::GalDirectory`. `#![forbid(unsafe_code)]`.
#
# t7-e2 links `ldap3` (rustls-ring, see the dep comment below), `mw-cache`, tokio,
# and tracing; the `no_openssl_in_tree` test asserts the tree has NO
# native-tls/openssl (and ldap3's transitive closure is clean).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# ldap3 rustls-ONLY (no native-tls/openssl). The `tls-rustls` feature +
# `default-features=false` keep openssl OUT of the tree; the `no_openssl_in_tree`
# test in `lib.rs` asserts it structurally from Cargo.lock (hard gate).
#
# VERSION DEVIATION (t7-e2 → coordinator): pinned to 0.12 here rather than the
# root workspace pin `ldap3 = "0.11"`. ldap3 0.11 links rustls 0.21 → ring 0.16.20,
# which cargo-deny flags `unlicensed` (ring 0.16's LICENSE file has no SPDX field
# and scores as the OpenSSL license) → `cargo deny check licenses` FAILS. ldap3
# 0.12.1 links rustls 0.23 (the SAME version the workspace already uses) → ring
# 0.17 (already license-clean in-tree), NO ring 0.16, NO openssl/native-tls, NO
# aws-lc-sys C. This is the minimal change that makes `cargo deny` green WITHOUT
# editing root Cargo.toml or deny.toml (both out of e2's ownership). ACTION for the
# coordinator/e0: bump the root workspace pin `ldap3` 0.11 → 0.12 so this can
# return to `{ workspace = true }`. API is source-compatible across 0.11→0.12.
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
# Offline GAL cache via `mw-cache::CacheClass::GalDirectory` (memory + store).
mw-cache = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
