[package]
name = "mw-engine"
description = "Mailwoman engine: account-backend seam + JMAP surface over IMAP/POP3 (SPEC §6.5)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
mw-jmap = { workspace = true }
mw-store = { workspace = true }
# mw-mime (→ mw-jmap only) and mw-smtp (→ no workspace crate) are cycle-free.
# mw-imap / mw-pop3 depend on THIS crate for the frozen trait, so mw-engine must
# NOT depend on them — backend *construction* lives in mw-server (plan §3 e6).
mw-mime = { workspace = true }
mw-smtp = { workspace = true }
# V2 (plan §3 e9): the engine-side full-text index and the rules evaluator.
# Both are leaf crates (DTO-only seams) so no dependency cycle is introduced.
mw-search = { workspace = true }
mw-sieve = { workspace = true }
# V3 (plan §3 e8): PIM serialization (iCal/vCard/RRULE/iTIP) + the CalDAV/CardDAV
# clients the engine drives for sync. All leaf/DTO seams — no dependency cycle.
mw-ics = { workspace = true }
mw-dav = { workspace = true }
mw-carddav = { workspace = true }
# V4 (plan §3 e6): the crypto/security primitives. The engine links the `native`
# build (public-key verify of received mail, cert harvest, verdict inputs, PQC
# store-key wrap); private-key ops are the wasm/browser surface (plan §1.2). Leaf
# crate — no dependency cycle. The frozen §2.1 DTOs live here and are re-exported.
mw-crypto = { workspace = true }
# Attachment-filename extraction at ingest for `filename:` search (workspace dep,
# already in-tree via mw-mime); parsing is best-effort and never panics.
mail-parser = { workspace = true }

[dev-dependencies]
# The env-gated Radicale round-trip test names `mw_dav::DavConfig` (the public
# type of `AccountRuntime.dav`); it is otherwise a normal dep of the lib.
mw-dav = { workspace = true }
