[package]
name = "mw-engine"
description = "Mailwoman engine: account-backend seam + JMAP surface over IMAP/POP3 (SPEC §6.5)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
mw-jmap = { workspace = true }
mw-store = { workspace = true }
# V6 (plan §3 e10): the layered cache. A leaf crate over `mw-store` (no cycle:
# mw-cache depends on mw-store, mw-store does not depend on the engine). The
# engine uses it for cache-aside on the header-window / message-body read paths
# and routes zero-access accounts' plaintext-derived reads through its structural
# `PlaintextDerived`/`AccountPosture` exclusion. Inert until e11 attaches a Cache.
mw-cache = { workspace = true }
# V7 (plan §3 e8, §2.2): the LDAP/GAL directory, wired as an ADDITIVE address-book
# source for recipient resolution + group-expand-before-send + S/MIME cert lookup.
# Cycle-free: `mw-directory` depends on `mw-cache`/`mw-store`, NEVER on the engine
# (unlike `mw-plugin`, which depends on the engine for the frozen trait and is
# therefore injected as an `Arc<dyn AccountBackend>` at mount, never named here).
# Inert until e14 attaches a `DirectorySource` via `attach_v7`.
mw-directory = { workspace = true }
# mw-mime (→ mw-jmap only) and mw-smtp (→ no workspace crate) are cycle-free.
# mw-imap / mw-pop3 depend on THIS crate for the frozen trait, so mw-engine must
# NOT depend on them — backend *construction* lives in mw-server (plan §3 e6).
mw-mime = { workspace = true }
mw-smtp = { workspace = true }
# V2 (plan §3 e9): the engine-side full-text index and the rules evaluator.
# Both are leaf crates (DTO-only seams) so no dependency cycle is introduced.
mw-search = { workspace = true }
mw-sieve = { workspace = true }
# V3 (plan §3 e8): PIM serialization (iCal/vCard/RRULE/iTIP) + the CalDAV/CardDAV
# clients the engine drives for sync. All leaf/DTO seams — no dependency cycle.
mw-ics = { workspace = true }
mw-dav = { workspace = true }
mw-carddav = { workspace = true }
# V4 (plan §3 e6): the crypto/security primitives. The engine links the `native`
# build (public-key verify of received mail, cert harvest, verdict inputs, PQC
# store-key wrap); private-key ops are the wasm/browser surface (plan §1.2). Leaf
# crate — no dependency cycle. The frozen §2.1 DTOs live here and are re-exported.
mw-crypto = { workspace = true }
# Attachment-filename extraction at ingest for `filename:` search (workspace dep,
# already in-tree via mw-mime); parsing is best-effort and never panics.
mail-parser = { workspace = true }
# V4 (plan §3 e6, §1.6): DKIM/SPF/DMARC/ARC verdicts + ARF report generation for
# the Security panel. `default-features = false` deliberately drops the crate's
# default `aws-lc-rs` provider (plan §1.11 — VET-BEFORE-ENABLE, not a V4 gate); we
# take only the hickory resolver + arc + report. Prod uses the system resolver;
# tests/CI inject a fixture-seeded `ResolverCache` so no DNS ever leaves the host.
mail-auth = { workspace = true, default-features = false, features = ["ring", "arc", "report"] }
# Attachment ext-vs-magic risk (plan §3 e6): declared MIME from the filename
# extension, compared against the sniffed magic bytes. Pure-Rust, leaf.
mime_guess = { workspace = true }
# security_verdicts cache key: a stable hash of the raw message (plan §2.4).
sha2 = { workspace = true }
# DLP custom-regex detector (plan §1.8). Built-in detectors (PAN/IBAN/SSN) are
# hand-scanned; custom-regex rules compile a user pattern.
regex = { workspace = true }
# 26.13 (t13 E5): BYO MaxMind-DB reader for the Received-chain GeoIP/ASN
# enrichment (SPEC §7.3). Pure-Rust, ISC, NO C / no `-sys` crates. maxminddb's
# `default = []` (empty), so plain workspace inheritance already links ONLY the
# serde-deserialize reader — the perf features (`mmap`, `simdutf8`,
# `unsafe-str-decode`) are all opt-in and deliberately left off, keeping the
# dependency surface minimal with no unsafe UTF-8 path. Native-only (mw-engine is
# native). NO database is bundled — the `.mmdb` is admin-supplied via `MW_GEOIP_DB`.
maxminddb = { workspace = true }

[dev-dependencies]
# The env-gated Radicale round-trip test names `mw_dav::DavConfig` (the public
# type of `AccountRuntime.dav`); it is otherwise a normal dep of the lib.
mw-dav = { workspace = true }
# The mock-vs-engine golden-shape parity gate (plan §1.5 / §3 e6): the security
# integration test asserts `mw-mock-jmap`'s crypto/security fixtures are
# byte-shape-identical to the engine's real output. Cycle-free (the mock does not
# depend on mw-engine).
mw-mock-jmap = { workspace = true }
