[package]
name = "mw-export"
description = "Server-side message export: EML / mbox / TXT / Markdown (plan §3 e3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mail-parser = { workspace = true }
mail-builder = { workspace = true }
thiserror = { workspace = true }
# HTML→Markdown uses html5ever's tokenizer directly (a real HTML5 tokenizer,
# never regex — same rule as `mw-sanitize`). Pinned to the exact version ammonia
# already locks in the workspace, so no new crate enters `Cargo.lock`; MIT/Apache-2.0.
html5ever = "0.39"
