[package]
name = "mw-imap"
description = "Hardened IMAP4rev2 client + AccountBackend for Mailwoman (tokio/rustls/imap-proto)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mw-engine = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
imap-proto = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
# SASL SCRAM-SHA-256(-PLUS): HMAC-SHA-256 + SHA-256 primitives (in-tree pins,
# hmac 0.13 ⇄ sha2 0.11); PBKDF2 is derived from HMAC here — no `pbkdf2` dep.
# `sha2` also computes the `tls-server-end-point` channel binding for `-PLUS`.
hmac = { workspace = true }
sha2 = { workspace = true }
# CSPRNG for the SCRAM client nonce (in-tree pin, matches mw-passwd).
getrandom = { workspace = true }
# Direct dep, version-matched to imap-proto's own `nom` (7.1.x) so there is no
# second nom in the tree. Needed only to classify streaming parse results
# (Incomplete vs. malformed) from `imap_proto::parse_response`.
nom = "7"

[dev-dependencies]
tokio = { workspace = true }
mw-engine = { workspace = true }
