[package]
name = "mw-mcp"
description = "MCP server + tool registry for Mailwoman V6 (plan §2.4, §20.3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# t6-e4: the MCP server. Transport is a hand-rolled Streamable-HTTP JSON-RPC 2.0
# handler over the in-tree `axum` (the plan §6-R3 fallback) — chosen over `rmcp`
# 0.9 because that pin is already two majors behind (2.2 shipped) on a
# safety-critical surface and its macro tool-router obscures the per-call
# `mw-oauth` scope + countersign + provenance threading. The §2.4 tool contract is
# SDK-agnostic, so a swap to `rmcp` later stays behind this crate's API.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
axum = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
mw-oauth = { workspace = true }
