[package]
name = "mw-mime"
description = "MIME/RFC5322 <-> JMAP Email bridge for Mailwoman (mail-parser/mail-builder)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mw-jmap = { workspace = true }
mail-parser = { workspace = true }
mail-builder = { workspace = true }
encoding_rs = { workspace = true }
thiserror = { workspace = true }
