[package]
name = "mw-oauth"
description = "Scoped API keys + OAuth 2.1 authorization server for Mailwoman V6 (plan §2.3, §20.1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# t6-e3: scoped API keys + OAuth 2.1 Authorization Server. Opaque tokens hashed at
# rest (SHA-256), API-key secrets Argon2id-hashed. Persistence is abstracted behind
# the `OAuthStore` trait (mw-server/e11 backs it with the mw-store 0007 tables) so
# this crate carries no `mw-store` dependency and stays unit-testable in isolation.
# All deps are pre-declared, permissive, pure-Rust (no openssl).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
